--- a/_posts/Test987#2023-02-16.md
+++ b/_posts/Test987#2023-02-16.md
@@ -4,7 +4,7 @@ layout: post
 category: note
 tags: [lecture, note]
 description: quick reference of php 7 syntax
-excerpt: "Test1234567 excerpt"
+excerpt: "Test1234567 excerpt 17:09"
 ---
 
 # Test
